# gunsho-cpp

./: .gitignore  CMakeLists.txt  readme.md
assets/: dice.xcf  dragon-hurt.xcf  goblin-hurt.xcf  goblin.xcf  player-hurt.xcf  player.xcf
src/: Combatant.cpp  Combatant.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  abilities.cpp  abilities.h  assets.cpp  assets.h  main.cpp
